# spark_isaac_mycobot_demo

./: .cursorrules  .gitignore  .gitmodules  LICENSE.md  README.md  initial_project_generation.md  spec.md
assets/scenes/: .gitkeep
commands/: test_live.md
isaac_sim/: __init__.py  build_mycobot_limo_cobot_scene.py  ros2_bridge_config.py  run_mycobot_live_sim.py  urdf_utils.py
isaac_sim/test/: test_urdf_utils.py
scripts/: build_isaac_scene.sh  fetch_mycobot_assets.sh  run_live_sim.sh  run_live_tests.sh
spark_verify_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
spark_verify_pkg/include/spark_verify_pkg/: articulation_model.hpp  pymycobot_serial_encoder.hpp  safety_boundary_evaluator.hpp
spark_verify_pkg/launch/: phase1_live_ecosystem.launch.py  phase1_mock_ecosystem.launch.py  phase2_live_ecosystem.launch.py  phase2_mock_ecosystem.launch.py  phase3_mock_ecosystem.launch.py  phase4_hil_ecosystem.launch.py
spark_verify_pkg/msg/: BlockDetection.msg  EdgeHealth.msg  NitrosFrameHandle.msg  PolicyInference.msg  RlObservation.msg  SerialCommand.msg
spark_verify_pkg/scripts/: block_vision_tracker  edge_deployment_node  joint_command_dispatcher  live_mdp_reward_monitor  live_nitros_camera_bridge  mock_camera_publisher  mock_usb_camera_hil  onnx_inference_node  rl_observation_bridge
spark_verify_pkg/spark_verify_nodes/: articulation_model_py.py  block_vision_tracker.py  block_vision_tracker_node.py  camera_lens_advisor.py  edge_deployment_node.py  isaac_lab_mdp_env.py  joint_command_dispatcher.py  live_mdp_reward_monitor.py  live_nitros_camera_bridge.py  live_sim_gate.py  mock_camera_publisher.py  mock_onnx_policy.py  mock_usb_camera_hil.py  mycobot_joint_names.py  mycobot_mdp.py  onnx_inference_node.py  reward_function.py  rl_observation_bridge.py  safety_boundary_evaluator_py.py
spark_verify_pkg/src/: articulation_model.cpp  mock_articulation_bridge.cpp  pymycobot_driver.cpp  pymycobot_serial_encoder.cpp  safety_boundary_evaluator.cpp
spark_verify_pkg/test/: test_articulation_model.cpp  test_live_sim_gate.py  test_phase1_integration.py  test_phase1_live_integration.py  test_phase2_integration.py  test_phase2_live_integration.py  test_phase3_integration.py  test_phase4_hil_integration.py  test_pymycobot_serial_encoder.cpp  test_safety_boundaries.cpp  test_safety_boundary_evaluator_py.py
